# ocrtoc_iiith

./: .gitignore  2-2-1.pcd  automate.sh  automate_sapien.sh  gg.npy  info.txt  pcd_data.csv  qq!:q!  result.csv  result.txt  resultpy.txt  stack_detection.yml  test.pcd  test_icp_o3d.py  test_icp_suger_2.pcd  txt_csv.py  txt_csv_process.py
contact_graspnet/: grasps_temp.npy  grasps_temp_0.npy  grasps_temp_1040.npy  grasps_temp_1058.npy  grasps_temp_1095.npy  grasps_temp_1096.npy  grasps_temp_1098.npy  grasps_temp_1144.npy  grasps_temp_1145.npy  grasps_temp_1168.npy  grasps_temp_1173.npy  grasps_temp_1182.npy  grasps_temp_119.npy  grasps_temp_1192.npy  grasps_temp_1199.npy  grasps_temp_1213.npy  grasps_temp_122.npy  grasps_temp_1232.npy  grasps_temp_1247.npy  grasps_temp_1279.npy  grasps_temp_1282.npy  grasps_temp_1291.npy  grasps_temp_1300.npy  grasps_temp_1305.npy  grasps_temp_1327.npy  grasps_temp_1330.npy  grasps_temp_135.npy  grasps_temp_1382.npy  grasps_temp_1391.npy  grasps_temp_1393.npy  grasps_temp_1470.npy  grasps_temp_1491.npy  grasps_temp_1498.npy  grasps_temp_1514.npy  grasps_temp_1538.npy  grasps_temp_1545.npy  grasps_temp_1547.npy  grasps_temp_1552.npy  grasps_temp_1556.npy  grasps_temp_1557.npy  (+1512 more)
ocrtoc_collision/: CMakeLists.txt  package.xml
ocrtoc_collision/launch/: octomap_server.launch  octomap_server1.launch
ocrtoc_collision/src/: pcl_helper.py  pick_pointcloud_rm.py  pointcloud_pick.cpp
ocrtoc_collision/src/python-pcl/pcl/pxi/: pxiInclude_190.pxi
ocrtoc_collision/src/python-pcl/python_pcl.egg-info/: SOURCES.txt  requires.txt
vgg/: vgg.py
(+6981 files in other folders)
